--- a/assets/style.css
+++ b/assets/style.css
@@ -17,3 +17,14 @@
     width: 1920px;
     height: 120px;
 }
+
+.reklama {
+    width: 500px;
+    height: 500px;
+    background-color: lightblue;
+    margin: 50px;
+
+
+}
+
+h2 {text-align: center;}
