--- a/assets/style.css
+++ b/assets/style.css
@@ -27,4 +27,13 @@
 
 }
 
+.footer {
+
+    width: 1920px;
+    height:300px;
+    background-color: gray;
+    border-color: aliceblue;
+    border-width: 20px;
+}
+
 h2 {text-align: center;}
